--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
 
-*{
+body{
     font-family: 'Oswald', sans-serif;
     color: #1D1D1D;
-    font-size: 37px;
     box-sizing: border-box;
 }
 body,html{
