--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer{
-    background-color: #CF291D;
-    height: 150px;
+    background-color: #1D1D1D;
+    height: 186px;
 }
 
 footer ul {
@@ -10,13 +10,15 @@ footer ul {
 }
 footer ul li {
     display: inline-block;
-    padding: 0 55px;
+    padding: 0 16px;
 }
 footer p{
     text-align: center;
     position: relative;
-    top: 35px;
+    top: 67px;
     font-size: 21px;  
-    font-weight: bold;
+    /* font-weight: bold; */
     font-family: 'Oswald', sans-serif;
+    color: #B50717;
 }
+
