--- a/css/information.css
+++ b/css/information.css
@@ -56,7 +56,7 @@ text-align: center;
 
 main{
 
-    margin: 0  232px;
+    margin: 0  100px;
     font-family: Arial,Helvetica,sans-serif;
     line-height: 24px;
     font-size: 20px;
@@ -95,6 +95,7 @@ color: #008eb7;
 .img2{
  padding-top: 15px;
  padding-bottom: 15px;
+ width: 100%;
 }
 li{
 margin-bottom: 3px;
