--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -8,7 +8,7 @@ main{
     width: 100%;
     height: 575px;
     z-index: 0;
-    background-image: url('https://via.placeholder.com/1024x512');
+    background-image: url('../icon/heroAboutUs.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
