header and footer are done

--- a/css/footer.css
+++ b/css/footer.css
@@ -20,6 +20,6 @@ footer p{
     font-size: 21px;  
     /* font-weight: bold; */
     font-family: 'Oswald', sans-serif;
-    color: #B50717;
+    color: #2267A5;
 }
 
