--- a/css/form.css
+++ b/css/form.css
@@ -3,8 +3,8 @@ fieldset{
     padding: 1em 2em;
     border: solid 1px #ccc;
     border-radius: 6px;
-    width: 990;
-    height: 1080px;
+    width: 85%;
+    height: 95%;
 }
 legend {
     font-size: 1.25em;
@@ -18,13 +18,15 @@ label{
 
 
 form{
+    /* float:left; */
     font-size: 20px;
     display: block;
-    background: #ecf0f3;
+    background: white;
     box-shadow: 14px 14px 20px #cbced1;
-    width: 1000px;
-    height: 1100px;
-    margin-bottom: 20px;
+    width: 120%;
+    height: 95%;
+    margin-left:10%;
+    margin-top: 10%;
 }
 
 form h3{
@@ -45,41 +47,25 @@ form h3{
   #name{
     display: flex;
     width: fit-content;
- 
-  }
-  #name input{
-
-  }
+   }
   #name label{
     float: left;
     padding-right: 200px;
   }
  #contact{
-   
-    border-right: 5px solid  #cbced1;
-    border-bottom: 5px solid  #cbced1 ;
-    border-top: 5px solid  #cbced1 ;
-    border-left: 5px solid  #cbced1;
-    padding: 0 20px;
-    margin-left: 50px;
-    padding-top: 60px;
-    padding-left: 30px;
-    padding-right: 200px;
-    padding-bottom: 30px;
-    font-size: 15px;
-    margin-top: 40px;
-    margin-bottom: 700px;
-
+    margin-right:10%;
+    border:  5px solid  #cbced1;
+    float: right;
+    padding: 10px 20px;
+    height: 60%;
+    width: 20%;
+    margin-top:5%;
  }
  #contact p{
   float:right;
  }
- header,main{
-     display: flex;
- }
- main{
-     padding-left: 5px;
- }
+
+
  #diseases{
      padding-top: 20px;
      display: flex;
@@ -113,7 +99,10 @@ form h3{
  #textarea{
     height: 150px;
     width: 300px;
-     resize: none;
+    resize: none;
+ }
+#form{
+   float: left;
  }
  section section div{
 margin: -10px;
@@ -214,5 +203,5 @@ form div{
   border-top: 5px solid  #cbced1 ;
   border-left: 5px solid  #cbced1; */
   padding-left:20px;
-  background-color:rgba(192, 192, 192, 0.11);
+  background-color:rgba(205, 238, 247, 0.986);
 }
