--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,7 +1,9 @@
 main {
     text-align: center;
 }
-
+*{
+    font-family: serif,'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 body {
     font-size: 28px;
 }
@@ -11,7 +13,10 @@ h1 {
     margin: 100px;
     font-size: 80px;
 }
-
+div{
+    display: block;
+    border-top: solid 4px rgb(34, 103, 165);;
+}
 h3 {
     text-align: left;
     /* border-radius: 10px; */
@@ -24,23 +29,26 @@ h3 {
     /* border-radius: 10px; */
     background-color: #80808021;
     padding: 27px;
+    color: rgba(34, 104, 165, 0.781);
 }
 
 label {
+    
+    /* float: left; */
     margin: 53px;
     font-weight: bolder;
-    color: #b507188f;
+    color:  rgb(34, 103, 165);
     cursor: pointer;
 }
 
 label:hover {
-    color: #000;
-    text-shadow: 0 0 50px #000;
+    color: rgb(55, 200, 236);
+    text-shadow: 0 0 50px rgba(55, 200, 236, 0.089);
 }
 
 label:focus {
-    color: #000;
-    text-shadow: 0 0 50px #000;
+    color: rgb(55, 200, 236);
+    text-shadow: 0 0 50px rgb(55, 200, 236);
 }
 
 [type="radio"] {
@@ -54,24 +62,27 @@ label:focus {
     position: relative;
     left: 36%;
     top: 46px;
-    background-color: #F14C42;
+    background-color: rgb(34, 103, 165);
     border-style: none;
     width: 345px;
     height: 80px;
     font-weight: bolder;
     font-size: 30px;
     border-radius: 4px;
-    box-shadow: 0 5px 0 #B50717;
+    box-shadow: 0 5px 0 rgb(34, 103, 165);
     color: #1D1D1D;
     cursor: pointer;
     transition: all .1s linear;
 }
 
 #submit:active {
-    box-shadow: 0 2px 0 #B50717;
+    box-shadow: 0 2px 0 rgb(34, 103, 165);
     transform: translateY(3px);
 }
-
+input{
+    display: block;
+    
+}
 /* #quiz{
     border: solid 1px;
     border-radius: 6px;
@@ -103,6 +114,6 @@ main img {
 }
 
 :checked + label{
-    color: #000;
-    text-shadow: 0 0 50px #000;
+    color: rgb(55, 200, 236);
+    text-shadow: 0 0 50px rgb(55, 200, 236);
 }
