--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap');
 
 
 * {
@@ -32,49 +32,50 @@ body {
  }*/
 
 
- button {
+ button  {
     display: block;
     position: relative;
-    left: 56%;
-    top: 19px;
-    background-color: #F14C42;
+    left: 69%;
+    top: -241px;
+    background-color: #37C8EC;
     border-style: none;
-    width: 167px;
-    height: 49px;
+    width: 124px;
+    height: 52px;
     font-weight: bolder;
     font-size: 30px;
     border-radius: 4px;
-    box-shadow: 0 5px 0 #b50717;
+    box-shadow: 0 5px 0 #37C8EC;
     color: #1D1D1D;
     cursor: pointer;
     transition: all .1s linear;
 }
 #button:active {
-    box-shadow: 0 2px 0 #B50717;
+    box-shadow: 0 2px 0 #213079;
     transform: translateY(3px);
 }
  
 
 
  fieldset {
-border-right: solid gray;
+
     /* -moz-box-shadow: inset -3px -3px 10px  #BFBFBF;
     -webkit-box-shadow: inset -3px -3px 10px  #BFBFBF;
     box-shadow: inset -3px -3px 10px  #BFBFBF; */
-    border-radius: 15px;
+    border-radius: 5px;
     font-size: large;
     font-weight: bold;
     height: 431px;
+    border: solid black;
 
-    background-color:  #ECECEC;
+
  }
  
  h3 {
-     color: #CF291D;
-     font-weight: bolder;
-     margin-top: 8px;
-
- }
+    color: #213079;
+    font-weight: bolder;
+    margin-top: 8px;
+    font-size: large;
+}
 h1{
     color: black;
     font-weight: bolder;
@@ -85,6 +86,7 @@ h1{
 }
 legend{
     margin: 60px;
+    background-color: #37C8EC;
 
 }
 
@@ -92,33 +94,32 @@ legend{
         display:block;
         margin: 15px;
     }
- #Feedbackform {
-font-size: large;
- width: 45%;
-  float:left; 
-  height: 450px; 
-margin:10px
 
-}
-
-
-#results {
-    overflow-y: scroll;
-    margin-right: 20px;
-    width: 50%;
-    padding-left: 20px;
-    float: right;
-    height: 480px;
-    margin: 10px;
-    text-align: left;
-    font-size: large;
-    border-radius: 15px;
-    background-color: #ECECEC;
-    padding-top: 20px;
-    position: relative;
-    top: -49px;
-    border-left: solid gray;
-}
+    #Feedbackform {
+        font-size: large;
+        width: 34%;
+        float: left;
+        height: 80%;
+        margin: 10px;
+        margin-left: 102px;
+    }
+    #results {
+        overflow-y: scroll;
+        margin-right: 19px;
+        width: 35%;
+        padding-left: 20px;
+        float: right;
+        height: 370px;
+        margin: 10px;
+        text-align: left;
+        font-size: large;
+        border-radius: 3px;
+        padding-top: 20px;
+        position: relative;
+        top: 62px;
+        border: solid;
+        left: -124px;
+    }
 footer{
     clear: both;
     position: absolute;
@@ -130,55 +131,52 @@ footer{
     padding: 40px;
     height: 800px;
     margin-top: 72px;
-    background-color:#ECECEC ;
+    
 }
 
 .list {
-    border-bottom: #B50717 solid  ;
+    border-bottom: #37C8EC solid;
+    background-color: white;
 }
 
-
-h5{
+h5 {
+    position: relative;
     font-size: 10px;
-    float: right
-
+    float: right;
+    /* margin-left: 58px; */
+    font-weight: bold;
+    top: -20px;
+    font-size: small;
 }
 
 
-p {
+main p {
     font-weight: bold;
     font-size: small;
     margin: 10px;
   
 }
 
-
 legend {
     float: left;
     font-size: xx-large;
     font-weight: bold;
-    color: #B50717;
-    position: relative;
-    top: -155px;
-    left: -42px;
-}
-h2 {
-    font-size: xx-large;
-    font-weight: bold;
     color: black;
-    /* border-bottom: solid gray; */
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-bottom: 5px;
     position: relative;
-    left: 59px;
-    top: -101px;
+    top: -60px;
+    left: -60px;
+    border-bottom: black solid;
+    width: 100%;
+    padding-bottom: 3%;
+    padding-top: 14px;
+    padding-left: 20px;
 }
+
    
-   button:hover {background-color: #B50717}
+   button:hover {background-color: #28B0DC}
    button:active {
     
-    box-shadow: 0 10px #666;
+    box-shadow: 0 10px black;
     transform: translateY(4px);
   }
 
@@ -188,14 +186,15 @@ h2 {
  
   #feedbacktext {
     width: 431px;
-    height: 170px;
+    height: 61px;
     position: relative;
     left: 10px;
+    top: -80px;
 }
 label {
     position: relative;
-    left: -346px;
-    top: 11px;
+    left: 11px;
+    top: -88px;
 }
 input {
     border-radius: 4px;
@@ -205,8 +204,96 @@ input {
 }
 #name {
     position: relative;
-    left: -346px;
-    top: 11px;
-    width: 226px;
-    height: 30px;
+    left: 10px;
+    top: -87px;
+    width: 31%;
+    height: 11%;
+}
+
+
+
+
+
+
+main img {
+    margin-right: 10px;
+    width: 35px;
+    height: 35px;
+    cursor: pointer  
+}
+
+
+
+ 
+
+.faces {
+    position: relative;
+    width: 58%;
+    height: 49%;
+    top: -73px;
+    left: 99px;
+}
+
+span {
+    position: relative;
+    top: -49px;
+    left: 361px;
+}
+
+
+.header {
+    position: relative;
+    /* width: 137px; */
+    /* left: 248px; */
+    position: absolute;
+    left: 841px;
+    background-color: #37C8EC;
+    height: 64px;
+    width: 504px;
+    padding-left: 21px;
+    padding-top: 26px;
+    border: solid black;
+    border-radius: -11px;
+    border-bottom: white;
+    top: 278px;
+    float: left;
+    font-size: xx-large;
+    font-weight: bold;
+    color: black;
+}
+
+
+#resultheader{
+    padding-bottom: 8px;
+    margin: -12px;
+    margin-left: -2px;
+}
+.last {
+    position: absolute;
+    height: 10%;
+    left: 574px;
+    bottom: 339px;
+}
+
+h4 {
+    left: 68px;
+    position: absolute;
+    bottom: 402px;
+    text-align: left;
+    font-size: large;
+    width: 183%;
+    height: -2%;
+    padding-left: 1px;
+    font-weight: bolder;
+    font-size: x-large;
+}
+#one {
+     position: relative;
+      top: -253px;
+}
+#tow{
+    margin-bottom: 16px;
+}
+#three{
+    margin-bottom: -5px;
 }
